# P10

./: .gitignore  CLAUDE.md  DAILY_LOG.md  PLAN.md  README.md  docker-compose.yml  env.template  export_p6_schema.py  pyproject.toml  requirements.txt
P10-Backtest/: .gitignore  CLAUDE.md  P10-Backtest-Conversations.md  docker-compose.yml  env.template  pyproject.toml  requirements.txt
P10-Backtest/config/: industry_frameworks.yaml  regime_params.yaml  settings.yaml
P10-Backtest/db/: connection.py  schema.sql
P10-Backtest/docs/: P10-Backtest-Spec.md
P10-Backtest/scripts/: 01_init_db.py
api/: main.py
backtest/: CLAUDE.md  pit_loader.py
bot/: formatter.py  telegram_bot.py
config/: industry_frameworks.yaml  llm_budget.yaml  regime_params.yaml  regime_params.yaml.bak  settings.yaml  watchlist.yaml
core/: invariants.py
db/: connection.py  feature_log.py  job_log.py  schema.sql  universe.py
docs/: P10-AlphaRadar-Architecture.md  P10-Phase1-Improvement-Plan0420.md  P10-Status-Snapshot-20260419.md  USAGE.md  phase1.5_completion.md  phase1_completion.md  phase1_final_snapshot.md  phase1_known_issues.md  reboot_recovery_checklist.md  regime_consumers.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
inputs/: watchlist_ai_semi.csv  watchlist_seed.csv
llm/: __init__.py  client.py  embedder.py  prompts.py  wiki_manager.py
ops/: com.p10.scheduler.plist
scheduler/: scheduler.py
scripts/: add_experience.py  backfill_range.py  composite_distribution_snapshot.py  data_freshness_check.py  diagnose_feature_coverage.py  generate_stock_pages.py  init_us_universe.py  init_wiki.py  llm_compare.py  load_watchlist.py  migrate_add_vote_columns.py  migrate_from_p6.py  phase1_acceptance.py  phase1_m6_verification.py  pull_data.py  run_composite_once.py  start_bot.py  start_scheduler.py  test_scheduler_robustness.py  verify_regime_alignment.py  (+1 more)
wiki/: index.md  (+2 more)
(+189 files in other folders)
